--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
+    "surge": "^0.21.7",
     "typescript": "^3.8.3"
   },
   "scripts": {
